--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,8 @@
+<div class="help">
+  <div class="container">
+    <p>Did you find the photos interesting? Please fill <a href="https://forms.gle/6gDPmooFKChkVhwn8" target="_blank">this very short feedback form</a> 😊</p>
+  </div>
+</div>
 <footer class="py-3 bg-light">
   <div class="container">
     <div class="row footer align-items-center">
