--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{ site.title }}</title>
+  {% if page.image %}<meta property="og:image" content="{{ site.url }}/assets/images/{{ page.image }}" />{% endif %}
+  {% if page.image %}<meta name="twitter:image" content="{{ site.url }}/assets/images/{{ page.image }}" />{% endif %}
   {%- seo -%}
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/assets/css/main.css">
