--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   {%- seo -%}
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/assets/css/main.css">
+  <script data-ad-client="ca-pub-2445086828825828" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
